theory/versions/v3.3.2/02_DYNAMIC_POSITION_MANAGEMENT.md
# Agent-first 动态仓位管理

版本：`3.3.2-complete-market-analysis-candidate.3`

状态：`FROZEN_THEORY_REVIEW_CANDIDATE / PUBLIC_REFERENCE_TRADING_AND_POSITION_ONLY / NON_EXECUTABLE`

Owner：Position Decision Agent（与 Market Cognition Agent 为同一决策 owner）。

输入：已准入事实、Agent 自己的市场认知与竞争假说、公开合约几何、上一 cycle 的精确决策/复盘引用、上一战略 episode 与参考敞口投影、无副作用计算工具和当前权限边界。

输出：写入 `HypothesisRecord.AgentDecisionBody` 权威原文的战略 episode、当前/目标参考敞口、PositionDelta、最终不可执行参考动作、entry、stop、targets、tranche、runner、reentry、风险预算、参考执行意图和路径驱动的调整计划；`BehaviorPlan` 作为正式五工件之一，只能原样引用/复制这些 Agent 自选内容。

## 1. 仓位决策权

仓位管理不是系统把 Agent 的语言等级映射成一个固定数值，也不是 deterministic allocator 在 Agent 完成分析后再决定“真正最终仓位”。在 V3.3.2：

- Agent 决定是否暴露方向风险；
- Agent 决定参考方向、触发、入场区、失效和保护；
- Agent 决定初始参考仓位、分批、加减仓、止盈、runner 和再入场；
- Agent 决定哪个市场变化将使计划升级、降级、取消或反转；
- Agent 决定 Outcome 之后这个仓位政策是否合理。

系统可以按 Agent 指定的输入和公式计算距离、数量、压力损失、MAE/MFE、capture 或组合场景，但不能选择公式参数、风险档位、目标、仓位数量或最终动作。它返回计算与 provenance，Agent 对使用和结论负责。

如果 Agent 给出的仓位计划激进、没有 stop、targets 有歧义或用了未登记的表达，在当前不可执行研究中仍原样封存。这些是 Agent 质量证据，不是 schema 失败。

## 2. 目标与基本立场

动态仓位将不确定的未来路径转换为可撤销、可降低、可复核的参考风险安排：

1. 初始错误不应破坏继续判断和捕捉新机会的能力；
2. 证据较弱或路径尚未启动时，可选择更小参考暴露或条件计划；
3. 亏损、更便宜或主观不甘不是增加同类风险的理由；
4. 路径得到新的机制差异证据时，Agent 可动态增加仓位，但必须重新评估整体风险；
5. 收益显著扩大时，应认真比较部分落袋、继续全持有和全部退出；
6. 部分落袋后保留独立 runner，为右尾大行情留出空间；
7. 每个调整都应能回到新事实、假说更新、时间消耗、风险变化或预先声明的路径条件。

不存在跨市场、跨周期和跨 regime 都最优的 stop、take-profit、ATR 倍数、harvest 比例、runner 比例或 reentry 次数。稳定理论定义问题、几何、选项和失效；具体参数是 Agent 本轮决策与后续 Review 对象。

## 3. REFERENCE 与 ACCOUNT 必须分开

### 3.1 当前唯一合法模式：REFERENCE

当前可以：

- 用归一化风险单位表达仓位；
- 用公开价格和合约几何计算参考数量；
- 比较 entry/stop/target/harvest/runner/reentry 的价格路径；
- 在 Outcome 中计算参考 MAE、MFE、capture 和 giveback；
- 提交最终不可执行参考动作。

当前不得：

- 读取或推断账户权益、可用保证金、真实持仓和挂单；
- 声称知道真实 fee tier、slippage、fill、funding accrual 或 liquidation price；
- 将参考数量命名为可下单数量；
- 从 `AgentDecisionBody` 或 `BehaviorPlan` 直接调用 paper/testnet/live executor。

```text
risk_mode = REFERENCE
reference_quantity = Agent decision or explicitly UNKNOWN
executable_quantity = null
execution_mapping = NOT_AUTHORIZED
```

### 3.2 未来 ACCOUNT 模式

真实仓位需要独立授权与真值 owner，至少包括 equity、margin、positions、orders、fills、fee/funding、leverage/liquidation、position mode、reduce-only、lot/tick/min-notional、spread/depth/impact、partial fill/cancel/replace 和 reconciliation。

这些未成立时，Agent 仍可写完整参考计划；安全系统只阻断外部副作用，不改写或否决这个研究决策。

## 4. 仓位语义对象

下列是 Agent 思考模型，不是必须按字段或枚举输出的 schema：

```text
Position Thesis
  episode and horizon
  final reference action
  direction or non-directional posture
  entry trigger / entry zone / entry mode
  structural invalidation
  protective stop or other exit response
  stress exit assumption
  initial reference size
  tranches and their purposes
  add / reduce / harvest / runner rules
  targets and path milestones
  time / event exit
  reentry conditions
  portfolio and shared-risk considerations
  critical unknowns and next review
```

Agent 可使用自然语言、表格、公式、区间或情景树组织计划。系统不能因为缺少 `state=CORE` 这类枚举就拒绝。

## 5. 初始仓位：先路径几何，后数量

### 5.1 入场前的核心问题

Agent 应在自己的结论中解决：

1. 什么可观测事实说明路径开始或已值得提前布局？
2. 什么事实说明路径不再成立？
3. 从保护条件到压力退出价可能还有多少价格距离？
4. 目标路径是否有足够空间容纳噪声、压力损失和公开成本假设？
5. 初始错误后是否仍有能力判断不同假说或等待新机会？
6. 该仓位是否与其他参考计划共享价格、venue、beta、抵押品或流动性因子？

如果 Agent 仍然决定在一个失效不清的路径上给出仓位，系统不会用格式门删掉。该决策原文将成为后续 Review 证据。

### 5.2 三个不同的退出概念

```text
structural invalidation = 什么事实说明假说/路径错了
protective response     = 什么时候开始减仓、保护或退出
stress exit price       = 用于参考损失计算的压力实现价
```

结构失效可以是区域失守、路径次序破坏、时间到期、新事实改变机制或一项反证。stop 价格不必等于结构失效点，因为触发到可实现退出之间还有距离。

### 5.3 单位压力损失工具

```text
u = |PnLPerUnit(entry, stress_exit)|
    + public_fee_bound_or_unknown
    + slippage_stress_or_unknown
    + funding_bound_or_unknown
    + gap_or_stop_through_bound
```

线性合约的简化几何：

```text
|PnLPerUnit(e, s)| = contract_multiplier × |e - s|
```

反向合约、期权或非线性产品不能用该简化。当前真实费用/滑点不可观测时，Agent 可使用明确的公开压力假设，或将数量表达为归一化 R 单位；不得宣称是真实最大损失。

### 5.4 参考数量计算

若 Agent 选择某个参考风险预算 `R_ref`：

```text
q_stop_ref = floor_to_lot(R_ref / u)
q_vol_ref  = floor_to_lot(R_vol_ref / unit_volatility_stress)
q_reference_candidate = min(q_stop_ref, q_vol_ref)
```

这些只是候选计算。Agent 可以选择更小、使用区间、改用条件触发，或因目标空间不足而选择 WAIT/OTHER。系统不能自动用 `min()` 结果覆盖 Agent 最终参考仓位。

### 5.5 噪声、结构和目标空间

```text
d_noise_candidate = k_vol × ATR_h + public_spread/slippage_stress
d_effective_candidate = max(d_structure, d_noise_candidate)
```

`k_vol` 不是理论常数。Agent 应根据 regime、horizon 和窗口敏感性决定是否使用。如果 stop 放到噪声外后已没有足够目标空间，合理选项可以是不进入，而不是把 stop 塞回噪声区。

## 6. 假说—tranche 风险对齐

每个 tranche 应有独立用途：验证路径、表达核心观点、利用新证据加仓、部分落袋、保留 runner 或在未来授权下对冲。

一个合理 tranche 通常可以说明：

```text
which hypothesis/path it expresses
why it exists now
entry or activation condition
independent invalidation/expiry
reference risk and quantity
target/harvest purpose
what evidence changes it
```

多个故事若都来自同一价格序列、同一 venue、同一 beta 或同一流动性压力，不构成分散。Agent 应将共享失败簇视为同一风险。系统可绘制依赖关系，但不能决定保留哪个 tranche。

## 7. 仓位生命周期是描述，不是枚举门

常见进程：

```text
观察/条件计划
→ 小额路径验证
→ 核心参考仓位
→ 部分落袋
→ 独立 runner
→ 关闭/重建
```

Agent 可使用 `WATCH/SEED/CORE/HARVESTED/RUNNER/CLOSED` 等语言，也可以用更自然的描述。这些词不是必填 lifecycle 枚举，不得因为词汇不同拒绝决策。

关键语义：

- 路径未启动时，条件计划可以比立即暴露更合理；
- 小额路径验证必须有失效、expiry 和明确目的；
- 升级为核心应有新的决策信息，而不只是浮盈或语言信心；
- 部分落袋把一部分有利路径转为参考已实现结果；
- runner 必须有自己的 thesis、stop/exit、expiry 和 giveback 处理；
- 反向计划是新 episode，不用“翻仓”语言掩盖旧风险的关闭。

## 8. 加仓、减仓与反马丁格尔

### 8.1 加仓的合理证据

加仓可以基于：

- 新的可观测路径确认；
- 来自不同依赖簇的新机制证据（如果当前真的有这类数据）；
- 旧 tranche 风险已通过实际减仓或可靠保护释放；
- 新 tranche 拥有自己的入场、失效、目标和风险理由；
- 加仓后总体压力损失仍符合 Agent 本轮选择的参考风险计划。

价格上涨本身可以是路径观察，但不必然是独立新证据。Agent 必须判断它是否真的改变了路径与风险。

### 8.2 亏损时的风险收缩

下列不是增仓理由：更便宜、已经亏了很多、距离成本价更远、想改善平均成本、相同假说换一种说法或相信总会回来。

亏损面前，Agent 应比较：

```text
hold under unchanged thesis
reduce because unit stress increased
close because path/invalidation failed
wait for a genuinely new episode after close
reverse only through a separate opposite thesis
```

最终选择仍属于 Agent。系统不能把“亏损=自动 close”或“距离更远=自动加仓”写成语义规则。

### 8.3 主动减仓条件

Agent 可在 hard falsifier 之前减少参考风险：

- 支持证据过期、路径迟迟不出现；
- 竞争假说获得更好的解释力；
- 波动上升使单位压力损失扩大；
- 已准入的流动性或 venue 事实恶化（当前未观测则不伪造）；
- 相关暴露增加；
- 已有高收益，但继续性没有同步增强；
- 时间价值接近耗尽。

## 9. 动态止损

Agent 可组合多种 stop/exit 逻辑：

| 类型 | 主要问题 | 候选处理 |
|---|---|---|
| 结构失效 | 区域、次序、路径被破坏 | 减仓/关闭/重建 |
| 假说失效 | hard falsifier 或机制被反证 | 关闭对应 thesis |
| 波动失配 | stop 落在正常噪声或单位风险升高 | 减小数量或放弃 setup |
| 时间止损 | expiry 前预期路径未出现 | 减仓/关闭/重评 |
| 事件止损 | 已准入的新事件改变风险 | 保护/关闭/新决策 |
| 组合止损 | 共享场景损失或集中度上升 | 减少边际风险大的计划 |
| 盈利保护 | 已有高收益且 giveback 风险上升 | 部分落袋/跟踪/关闭 |

当 Agent 只是把同一 tranche 的 stop 放宽、且没有另行增加该 tranche 风险预算时，一个有用的参考是：

```text
StressLoss_after_change <= StressLoss_before_change
```

它不适用于有新证据且 Agent 明确批准新预算的独立 ADD。它也不要求 stop 价格永远只向盈利方向移动：如果新结构需要更宽的 stop，Agent 可以决定先减小参考数量后重算，避免仅因保护放宽而被动增加风险。这是管理思路，不是系统强制改写 Agent 计划的 allocator rule。

不机械把 stop 推到成本价。成本价不是市场结构；若 breakeven stop 位于正常噪声中，部分落袋或减小仓位可能更真实。

## 10. 动态止盈、落袋与 runner

在参考 episode 中：

```text
Floor_t = ReferenceRealizedNet_t
        + StressLiquidationNet(Q_remaining_t, stress_exit_t)

Giveback_t = PeakMarkedNet_t - Floor_t
```

若 Agent 选择一个希望锁定的参考保底 `RequiredFloor_t`，可以请求计算工具求最小落袋数量 `h`：

```text
Floor_t(h, stress_exit_t) >= RequiredFloor_t
Q_remaining_t >= Q_runner_min chosen by Agent
```

`RequiredFloor`、里程碑、harvest 比例和 `Q_runner_min` 全部是 Agent 决策/候选 policy，不是系统常数。

### 10.1 高收益时的主动处理

收益较大时，Agent 应认真比较：

```text
A. 继续全持有
B. 部分落袋 + 独立 runner
C. 全部退出
D. 更换 stop/target 与数量的组合
```

当已有收益扩大，而继续性、新证据或路径空间没有同步增强时，理论倾向让 Agent 优先考虑部分落袋，将一部分有利路径变成参考已实现结果。但最终比例和动作仍由 Agent 决定，并在 Review 中受检验。

落袋后无新证据不应立即加回；runner 的目标是保留右尾，不是把全部已得收益重新暴露。

### 10.2 路径—管理对照

| Agent 判断的路径 | 值得比较的管理 |
|---|---|
| 趋势稳定、路径完整、波动可控 | 保留更多 runner 空间，避免过早全平 |
| 顺势波动扩张 | 部分落袋 + 更宽但数量更小的 runner |
| 到达结构目标、继续性一般 | 提高参考 Floor，减小剩余暴露 |
| 衰竭/假突破/竞争路径增强 | 更大 harvest、收紧或退出 |
| RANGE/均值回归 | 结构目标更重要，runner 可更小 |
| hard falsifier | 关闭对应计划，不因浮盈忽略 |
| 关键 UNKNOWN 增加 | 条件化、减小或等待，由 Agent 比较机会成本 |

## 11. 路径驱动的实时重规划

每次新决策只需重新审视真正变化的内容：

```text
price path and zones
hypothesis support / contradiction / falsifier
volatility and unit stress
time / expiry / scheduled review
admitted liquidity or event facts, if any
shared portfolio exposures
original position thesis and prior decision text
```

| 新观察 | Agent 可考虑的参考转换 |
|---|---|
| 路径开始但证据尚弱 | 小额验证/条件触发 |
| fresh 路径确认 | 升级核心或增加独立 tranche |
| 只有浮盈 | 持有/落袋/收紧的比较，不自动加仓 |
| 软反证 | 减小/保护/取消未触发部分 |
| hard falsifier | 关闭相关 thesis，保留事后 Review |
| 波动上升 | 重算单位压力，通常需比较减小数量 |
| 波动下降 | 不自动放大；需新决策 |
| 高收益且趋势仍在 | 部分落袋 + runner |
| runner giveback 超过 Agent 本轮容忍 | 减小/关闭/改变保护 |
| 竞争假说转为主线 | 先处理旧计划，再建独立新 episode |

系统可将原决策和新事实放在一个有界上下文中，但不能自动生成 PositionTransition 并把它当成 Agent 选择。

## 12. 再入场

固定“24 小时”、“最多两次”不是稳定理论。Agent 应根据上一次失败类型、新证据、新路径和剩余参考风险判断：

| 上次退出原因 | 再入场时需回答 |
|---|---|
| 正常噪声触发保护，父 thesis 仍在 | 退出后是否出现 fresh confirmation？ |
| 假突破后重新夺回区域 | 是否有新机制/路径，而不只是价格回来？ |
| 时间到期 | 什么新信息改变了时钟？ |
| hard falsification | 是否真的建立了新 thesis/episode？ |
| 流动性/执行故障 | 研究可继续，外部执行仍保持关闭 |
| 同一失败簇重复 | 是否真的有不同证据，还是再次表述旧信念？ |
| 新反向假说 | 旧计划如何先关闭，新计划如何独立失效？ |

attempt count 只是 Review 信息，不是系统终态门。Agent 可在原文中解释为什么当前次数仍值得/不值得。

## 13. 组合、共享风险与尾部

当前没有账户真值，因此只能做参考场景。Agent 可请求工具计算：

```text
portfolio_vol = sqrt(w' Σ w)
MRC_i = (Σw)_i / portfolio_vol
RC_i = w_i × MRC_i
PortfolioStressLoss = max_scenario sum_i Loss_i(scenario)
```

但是否使用 covariance、哪些场景有意义、如何调整某个计划由 Agent 决定。最少考虑的尾部候选：

- common beta shock 和相关性向 1 收敛；
- 波动跃升、价差扩大与流动性撤退；
- venue/API/托管/指数或预言机故障；
- funding、拥挤和清算链式恶化；
- gap/stop-through；
- stablecoin、抵押品或网络状态冲击；
- 多个不同故事共享价格/流动性/数据源失败。

非价格数据当前 UNKNOWN，因此 Agent 应将这些作为未观测压力场景，不声称已测得真实组合风险。

## 14. 完整动作比较

Agent 不应只在 LONG/SHORT 中二选一。当前参考研究可比较：

```text
directional entry
conditional entry
small reference probe
WAIT with opportunity cost
HOLD / REDUCE / CLOSE
partial harvest + runner
full exit
reverse through two episodes
reentry as a new episode
information-seeking or OTHER action
```

上述不是必须使用的受控词汇。Agent 可表达新的参考行为。系统不得因动作不在 enum 中拒绝；只有实际调用外部副作用时，权限系统才能按授权阻断执行。

WAIT 也应是 Agent 的真实决策，而不是系统因 UNKNOWN 或规则不闭合产生的默认值。高质量 WAIT 通常说明原因、机会成本、下一复核和改变决策的观察。缺失这些内容仍封存，留给 Review。

## 15. 可读仓位决策的语义责任

一个能支持实战研究的 `AgentDecisionBody` 应尽可能让读者理解：

- 最终不可执行参考动作是什么；
- 立即、条件、分批或不进入的入场逻辑；
- 结构失效、保护响应、stop 和压力退出假设；
- 初始参考仓位或归一化风险单位及其理由；
- 不同假说/路径对应的 tranche；
- 加仓、减仓、取消、落袋和 runner 的条件；
- 目标区、分批目标、时间/事件退出与 giveback 处理；
- 亏损情景、高收益情景与超预期延续情景的不同计划；
- reentry 需要的新证据与剩余风险；
- 关键 UNKNOWN、下一 review 与什么会改变计划。

这是语义职责，不是必填 schema、标题顺序或封存门。Agent 缺失某项时，系统不得用默认 policy 填充；原文封存，Outcome 依预注册市场时钟继续，Agent Review 判断缺失的实际后果。

## 16. Outcome 与 Agent Review

系统可在预注册 horizon 采集同口径价格并计算：

```text
MAE
MFE
endpoint reference return
time in reference risk
path milestones observed or typed missing
reference capture
reference giveback
stop/target touch sequence where observable
```

当前没有 fill、fee、slippage、latency 和 position truth，不能计算真实 net R 或盈利。

Agent Review 需自主判断：

- 初始仓位是否与当时认知和失效几何一致；
- stop 太紧、太宽、与结构无关，还是合理；
- targets 是否太早截断右尾，或过度暴露已得收益；
- partial harvest 与 runner 如何分别贡献；
- 加仓是基于新证据，还是追价/不甘；
- 减仓和退出是否对路径变化反应过慢/过快；
- reentry 是新 episode，还是老失败的重复；
- 当时的 WAIT/替代动作机会成本如何。

固定全平、trailing、partial+runner、时间退出、结构退出和 reentry 变体都是候选 policy arms，未来只能从同一 PIT/同一机会集的前瞻 Outcome 比较中学习。系统不能从 MFE 事后反向挑选“最优退出”并写回旧决策。

## 17. 参数、成熟方法与已知边界

可供 Agent 判断的成熟方法：stop-distance sizing、volatility scaling、risk unit/tranche、portfolio heat、stress scenarios、partial harvest、trailing/time/structure exit、runner 与 drawdown 思路。这些提供问题和计算框架，不提供当前最优参数。

参考：

- [CME: Proper Position Size](https://www.cmegroup.com/education/courses/trade-and-risk-management/proper-position-size)；
- [Fidelity: Managing Positions](https://www.fidelity.com/learning-center/trading-investing/trading/managing-positions)；
- [Fidelity: Exit Strategies](https://www.fidelity.com/learning-center/trading-investing/trading/exit-strategies)；
- [Kaminski & Lo: When Do Stop-Loss Rules Stop Losses?](https://www.sciencedirect.com/science/article/abs/pii/S138641811300030X)；
- [Moreira & Muir: Volatility-Managed Portfolios](https://onlinelibrary.wiley.com/doi/10.1111/jofi.12513)；
- [Moskowitz, Ooi & Pedersen: Time Series Momentum](https://pages.stern.nyu.edu/~lpederse/papers/TimeSeriesMomentum.pdf)。

未校准时不把概率、EV、Kelly 或胜率当作仓位根据。如果 Agent 仍然在原文使用了伪精确概率，该原文依然被封存，并由 Review 评价这种做法对决策的影响；系统不用格式门修改或拒绝。

当前仍为 UNKNOWN：哪种 stop/target/harvest/runner/reentry 组合有稳定优势，参考风险与真实执行风险的偏差，以及任何仓位政策能否在成本后提供正价值。

## 18. 状态转换、机制不确定性与提前规划

V3.3.2允许Agent基于未验证的主体或意图假说提前规划，但实际风险激活应尽量绑定可观察状态转换，而不是要求先证明主体身份。

示例：

```text
actor hypothesis:
  大型参与者可能维护支撑并在事件反弹中派发

observable event plan:
  E1 支撑区出现拒绝下破/吸收 → 允许小额反弹probe
  E2 反弹进入压力区但主动买入效率下降 → 落袋/收紧保护
  E3 事件后放量上冲但不能接受新高 → 关闭多头runner，评估反向新episode
  E4 持续接受新高且卖压衰减 → 派发假说削弱，不启动反向计划
```

这样，即使主体身份长期不可验证，路径规划的动作价值仍可由Outcome评价。

### 18.1 Event clock先于calendar clock

每个tranche优先绑定事件状态：

```text
NOT_ACTIVATED → ACTIVE → HIT/PARTIAL/HARD_FAIL/EXPIRED
```

Calendar窗口用于到期和机会成本，不应让尚未激活的后续事件提前失败。方向、路径和timing分别评价；时间偏差不能自动推翻方向正确的状态规划。

### 18.2 不同认识等级对应的风险几何

| 认识等级 | 合理计划候选 | 仍需回答 |
|---|---|---|
| 已观察事实/透明测量 | 条件或直接参考动作 | 结构失效和成本 |
| 支持的潜在状态 | 正常但可撤销的参考tranche | 强替代和下一观察 |
| 未验证机制 | 更小probe、等待可观察触发、期权式不对称计划 | 若机制错了为何损失有限 |
| 主体/意图不可观测 | 只交易可观察状态，不把身份确信映射成大仓位 | 路径如何独立于主体故事成立 |

认识等级不机械映射仓位数字，最终选择仍归Agent；表格只防止“故事越具体，仓位越大”的错误升级。

## 19. 动态交易的六个对象必须分开

过去只写“当前看空、计划做空、仓位30%”会把市场观点、现有风险和本次动作混成一句话。candidate.3 将它们拆成六个 Agent 语义对象。它们可以用自然语言表达，不是系统必填 schema。

### 19.1 `StrategicEpisodeState`

表示一个跨 cycle 的市场交易命题，而不是某一笔订单：

```text
episode identity and parent/reversal relation
strategic thesis, direction and horizon
market regime and event-clock path
key zones, activation and hard invalidation
status: WATCHING / ACTIVE / SUSPENDED / CLOSED / INVALIDATED / EXPIRED
what changed since the prior cycle
```

episode 的方向是市场命题，不能从账户净头寸倒推。例如战略 episode 看空时，Agent 仍可暂时为空仓、持有反弹 TACTICAL 多头，或用 HEDGE 降低短期风险。

### 19.2 `ReferenceExposureState`

表示决策 cutoff 时理论上正在承担的参考风险：

```text
role-level direction and normalized risk/exposure
entry/cost assumption and activation time
protection, invalidation and expiry
remaining risk, realized reference harvest and runner giveback
critical data dependencies
```

它来自上一 cycle 的精确计划与已观察路径的透明投影，不是账户真值。若是否激活、是否成交或当前数量无法确定，必须保持 `UNKNOWN` 或给出多分支状态，不能选择对结果最有利的一支。

### 19.3 `TargetExposureState`

表示本次决策后 Agent 希望达到的参考风险状态。目标敞口可以等于当前敞口，即 `HOLD`；也可以是零、不同角色组合或条件目标。它不是可下单数量。

### 19.4 `PositionDelta`

```text
PositionDelta = TargetExposureState - ReferenceExposureState
```

只有先定义当前和目标，才能知道本次是 `ADD`、`REDUCE`、`HARVEST` 还是角色迁移。方向相同但用途不同的 CORE 与 HEDGE 不能直接净额后丢失语义。

### 19.5 `PositionTransitionPlan`

说明 `PositionDelta` 何时以及为什么生效：

```text
action and affected role/tranche
pre-state → intended post-state
activation observation
decision-relevant evidence delta
invalidation / cancellation / expiry
partial-transition handling
conflicts, fallback and next review
```

### 19.6 `ExecutionIntent`

说明如何以参考方式把 delta 暴露到市场路径，而不是订单命令：

```text
urgency and passive/aggressive preference
price envelope and reference order style
time-in-force / expiry
slicing and sequence
partial-fill assumption
cancel/replace condition
slippage/spread/impact/funding/borrow stress bound
fallback if not obtained
```

当前 `ExecutionIntent` 只能用于研究和 Outcome 对照。未来 `OrderCommand` 由独立执行基础设施拥有，不能从自然语言自动生成。

## 20. 动作集合与前后状态语义

动作名是沟通词汇，不是封存枚举门；Agent 可以使用 `OTHER` 或更精确的自然语言。为了避免同词异义，建议遵循：

| 动作 | 合法前态 | 意图后态 | 关键区别 |
|---|---|---|---|
| `WATCH` | 无敞口 | 无敞口 | 收集信息，无已承诺激活条件 |
| `WAIT` | 无敞口 | 无敞口 | 已比较合法动作，因风险回报/未来信息/约束暂缓 |
| `CONDITIONAL` | 无或既有敞口 | 条件目标 | 只有预注册观察发生才转换 |
| `PROBE` | 通常无敞口 | 小型 PROBE | 用有限风险取得路径信息，不是缩小版确信仓 |
| `OPEN` | 无相应 episode 敞口 | 新 CORE/TACTICAL/HEDGE | 首次承担该 episode 风险 |
| `HOLD` | 有敞口 | 当前≈目标 | thesis 仍有效且没有足够 delta 改仓 |
| `ADD` | 有敞口 | 风险增加 | 必须有新证据/更好几何/预注册升级，不因亏损摊平 |
| `REDUCE` | 有敞口 | 风险下降 | 风险或证据恶化；不等同于 thesis 完全失效 |
| `HARVEST` | 盈利敞口 | 部分兑现 | thesis 可继续，已实现收益与 runner 分开 |
| `CLOSE` | 有敞口 | 零敞口 | 退出风险；episode 是否关闭另行声明 |
| `REENTRY_PENDING` | 已平仓 | 零敞口 | thesis 可能仍有效，但等待新证据，绝非自动再入 |
| `REENTER` | 已平仓且有新证据 | 新 tranche/新 episode 风险 | 重新承担风险，必须重新计算几何和预算 |
| `HEDGE` | 有被保护风险 | 新对冲角色 | 减少特定风险，不自动改变战略观点 |
| `OTHER` | 任意合法参考状态 | Agent 声明 | 保留新型、非方向或信息行动 |

反转不得伪装成一个原子动作。理论上先 `CLOSE` 旧方向并终止/暂停旧 episode，再以新的证据和风险预算 `OPEN` 反向 episode；这样可分别评价退出和新开是否合理。

## 21. 仓位角色与独立管理义务

| 角色 | 用途 | 必须独立回答的问题 |
|---|---|---|
| `CORE` | 承担战略路径主风险 | 战略失效、最大参考风险、如何跨 tactical 波动 |
| `TACTICAL` | 捕捉较短 event-clock 子路径 | 不得静默结束或覆盖 CORE；有独立到期/目标 |
| `HEDGE` | 降低 beta、gap、事件或波动风险 | 对冲什么、basis 风险、成本、何时拆除 |
| `PROBE` | 用小风险获得区分性信息 | 什么观察值得买、最大信息成本、如何升级/关闭 |
| `RUNNER` | 保留右尾敞口 | 已兑现多少、独立保护、giveback 上限和到期 |
| `CASH/FLAT` | 当前无方向敞口 | 它是敞口状态，不代表没有市场观点 |

一个 tranche 只能有一个主要角色 owner，但同一 episode 可同时有多个角色。角色迁移必须明确，例如 PROBE 升级为 CORE 时应记录新证据、旧/新风险和保护变化，不能事后把亏损 probe 重命名为长期 core。

## 22. 风险预算层级与风险守恒

### 22.1 多层预算

Agent 的参考计划至少应考虑：

```text
tranche risk
episode risk
instrument risk
correlated-cluster risk
portfolio reference risk
pending-if-activated risk
drawdown reserve
gap/liquidity/funding/borrow stress
```

对同时可能激活的计划，不能只看当前已激活风险：

```text
R_active
+ R_pending_if_jointly_activated
+ R_gap_liquidity_funding_stress
<= Agent-declared portfolio reference budget
```

公式是透明压力检查，不替 Agent 选择预算。若没有账户权益，使用归一化风险单位和情景损失；不能把它转换为真实美元仓位。

### 22.2 杠杆、名义敞口与可损失风险分开

```text
notional exposure ≠ stop-based reference risk ≠ margin at risk ≠ liquidation risk
```

低保证金不代表低风险，高杠杆也不能因 stop 较近就忽略 gap、强平、资金费率和流动性。参考计划应分别表达名义方向、结构损失、压力损失和产品强制退出风险。

### 22.3 回撤和机会储备

Agent 可保留回撤储备或机会储备，使一个错误 episode 不消耗全部参考能力。增加任何 tranche 后都应重新计算整体压力，而不是只看该 tranche 的独立 stop。

## 23. 决策相关增量、无交易区与迟滞

动态不等于每个新数据点都交易。只有以下变化之一达到 Agent 预声明的决策阈值，才应考虑改变目标敞口：

1. 市场状态或主导路径发生变化；
2. activation、hard invalidation、expiry 或关键区域被有效确认；
3. 收益/失效几何显著改变；
4. spread、impact、funding、borrow 或流动性改变可行动性；
5. 组合相关、压力损失或预算发生变化；
6. 关键 UNKNOWN 得到区分性新证据；
7. 时间消耗使机会成本或事件窗口失效。

若转换的预期改善不足以覆盖摩擦、噪声和模型不确定性，则保持在 `no-trade zone`。未校准时只用“明显不足/接近/明显超过”这类序数判断，不伪造精确 EV。

交易成本模型中确实会出现不调整的 no-trade region；但其边界依赖成本、资产、期限和模型，不能移植成固定百分比（[Cai, Judd & Xu: Numerical Solution of Dynamic Portfolio Optimization with Transaction Costs](https://www.nber.org/papers/w18709)）。candidate.3 借用的是“摩擦下应容忍一定偏离”的原则，不声称已经求得当前市场的最优边界。

Agent 可声明：

```text
observation trigger: 只更新事实
review trigger: 必须重新判断，但不预设改仓
transition trigger: 允许改变目标敞口
emergency/safety trigger: 只按独立授权的未来安全策略处理
tolerance band / re-arm condition / cooldown or event reset
```

迟滞的目的是防止同一阈值附近反复加减仓。它不是固定分钟数；不同市场、周期和成本由 Agent 在当时信息下决定。

## 24. 同时触发时的冲突优先级

为防止 target、stop、事件和风险规则互相覆盖，语义优先级为：

1. **身份、PIT、权限与外部副作用硬边界**：系统只能阻断不合法副作用；
2. **Agent 预声明的 hard invalidation 或保护响应**：触发 Agent 重新决策；当前研究中不产生真实平仓；
3. **风险预算、关键数据失效和产品强制风险**：优先复核是否降低或取消新风险；
4. **路径 activation 与角色升级**：只有前面条件未冲突才考虑；
5. **target、harvest、runner 与 tactical 优化**：不得覆盖更高层保护。

同一价格 bar 内既触 stop 又触 target 且没有更细路径时，Outcome 记为 `ORDER_UNKNOWN_WITHIN_BAR` 或按事前冻结的保守顺序，不选择更有利结果。当前系统不能以“优先级”为由替 Agent 自动选择市场动作；它只保证语义不自相覆盖。

## 25. 数据降级与持仓状态

每个 active/pending tranche 应声明关键数据依赖和降级方案：

| 情况 | 当前参考研究语义 |
|---|---|
| 可选增强数据缺失 | 记 `UNKNOWN`，不视为零；若核心路径仍可判断可继续 |
| 关键 order-flow/OI/event 数据变旧 | 禁止沿用为当前事实；触发 review，是否 HOLD/REDUCE/CLOSE 由预声明 fallback 和 Agent 决定 |
| 核心价格/标的身份/PIT 失败 | 不创建新的可行动参考转换；现有参考状态标 `UNOBSERVABLE` |
| 账户/订单/成交真值失败 | 当前无账户影响；未来必须阻断新增外部意图并进入独立 reconciliation/emergency policy |

“数据缺失时仍保留假说”不等于“数据缺失时继续持仓”。假说存在性、参考风险是否可维持和外部执行安全是三件不同的事。

## 26. 从目标敞口到执行事实的完整链

```text
TargetExposureState
→ PositionDelta
→ ExecutionIntent                 # 当前仅参考，Agent owner
→ OrderCommand                    # 未来、独立授权与执行系统 owner
→ Order/ExecutionReport           # 未来、venue/broker事实
→ AccountPositionTruth            # 未来、账户事实 owner
→ reconciliation against target
```

当前只到 `ExecutionIntent`，其余保持 `NOT_AUTHORIZED/NOT_IMPLEMENTED`。

### 26.1 参考订单语义

- 市价意图强调速度，但成交价不确定；
- 限价意图限制价格，但可能完全不成交；
- stop 是触发条件，不是保证成交价；
- stop-limit 可能触发后不成交；
- “价格触及”只证明市场到达该区域，不证明某订单可成交；
- partial fill、cancel/replace、expiry 和剩余数量必须有事前处理语义。

这与公开投资者教育中的订单属性一致：不同订单类型在价格保证和成交保证之间有不同权衡，不能把 limit/stop 当成确定 fill（[Investor.gov: Types of Orders](https://www.investor.gov/introduction-investing/investing-basics/how-stock-markets-work/types-orders)）。

### 26.2 参考执行 Outcome 模式

每个计划必须冻结一种口径，不能 Outcome 后挑选：

```text
TOUCH_ONLY_UPPER_BOUND   # 只说区域被触及，不计算成交收益
NEXT_OBSERVABLE_PRICE   # 用下一可观察价，明确采样和延迟
STRESS_BAND             # 以不利侧价带估计
LIQUIDITY_AWARE_PROXY   # 只有当时合法的spread/depth/impact输入才可用
```

交易成本至少分解为 fee、spread、market impact、slippage/gap、funding、borrow、roll 和未成交机会成本。大单执行的速度与冲击存在取舍，理论可采用 Almgren–Chriss 类框架作为透明压力模型，但参数未校准时不能声称最优（[Almgren & Chriss, 2001](https://doi.org/10.21314/JOR.2001.041)）。

### 26.3 未来订单状态

未来账户模式应保留类似 `NEW/PENDING/PARTIALLY_FILLED/FILLED/CANCELED/REJECTED/EXPIRED` 的事实状态、累计成交量和剩余量，不能用一个 `success=true` 覆盖全流程。FIX 的订单状态变化规范可作为状态机参考（[FIX Trading Community: Order State Changes](https://www.fixtrading.org/wp-content/uploads/download-manager-files/FIX-Latest-as-of-EP284-Order-State-Changes.pdf)）。

## 27. 产品特有仓位与执行风险

| 产品 | 不能省略的动态变量 |
|---|---|
| 现货 | 托管、venue、结算、gap、流动性与持有机会成本 |
| 做空/融券 | borrow availability、borrow fee、recall、buy-in、上行无界风险 |
| 线性永续 | funding、mark/index、margin、liquidation、ADL、venue 风险 |
| 反向合约 | 非线性币本位 PnL、抵押品与方向相关性 |
| 到期期货 | basis、roll、到期/交割、期限流动性 |
| 期权 | delta/gamma/vega/theta、IV、到期、跳空和非线性风险；不能只用标的 stop |
| 代币化股票 | 正股交易时段与 token 时段错位、basis、发行/托管/赎回、公司行动、venue 与追踪误差 |

多头与空头不是镜像：融资/借券、强平、跳空、上行无界损失和事件风险不同。杠杆会放大损失，并可能触发追加保证金或强制退出；当前参考研究不得把高杠杆映射为“资金使用效率”（[CFTC: Understand the Risks of Virtual Currency Trading](https://www.cftc.gov/LearnAndProtect/AdvisoriesAndArticles/understand_risks_of_virtual_currency.html)）。

## 28. 未来账户模式的权责与硬风险门

只有独立授权后，未来账户模式才可增加三个事实 owner：

```text
AccountSnapshotTruth: equity, margin, positions, limits, freshness
OrderTruth: command identity, state, leaves/cumulative quantity
FillTruth: price, quantity, fee, time, venue, funding/borrow attribution
```

未来硬风险门只能 `PERMIT` 或 `BLOCK` 外部副作用，并返回具体原因；不得静默缩小 Agent 目标仓位、改变方向、替换订单类型或把被阻断计划写成 WAIT。被阻断后回到 Agent 重新决策。

市场接入前的自动风险控制是未来执行的必要保护，但它不构成市场判断。SEC Rule 15c3-5 对市场接入风险控制的要求说明了“交易前控制”和决策本身应分离（[SEC: Risk Management Controls for Brokers or Dealers with Market Access](https://www.sec.gov/rules-regulations/2011/06/risk-management-controls-brokers-or-dealers-market-access)）。

任何自动紧急减仓/平仓都需要单独、明确的用户授权、适用产品规则、账户真值和演练；不能从一般执行授权推导。当前没有上述权限。

## 29. Actionability：封存合格不等于交易合格

```text
RESEARCH_ACCEPTED      可读、非空、身份/PIT合法并封存
OBSERVATIONAL_ONLY     只有认知，没有足够动作几何
REFERENCE_CONDITIONAL  有条件转换，尚未激活
REFERENCE_ACTIONABLE   当前参考动作、目标、失效、风险和执行语义明确
ACCOUNT_BLOCKED        参考明确，但账户/权限/风险门不成立
ACCOUNT_ACTIONABLE     未来：授权、真值、风险门和执行设施全部成立
```

`BehaviorPlan` 含糊、缺字段或为空时，只要 `AgentDecisionBody` 本身可读非空，cycle 仍可封存并进行市场 Outcome/Review；但 actionability 只能是 `OBSERVATIONAL_ONLY` 或 `ACCOUNT_BLOCKED`，绝不能外部执行。这样同时保留研究原文和执行安全。

## 30. 动态管理的复盘归因

Outcome 后必须分开：

1. **Market analysis**：状态、方向、路径、区域、时机、机制；
2. **Action selection**：在当时合法动作中为何选择 OPEN/WAIT/HOLD 等；
3. **Sizing policy**：初始风险、tranche、组合预算是否与认知一致；
4. **Transition quality**：加减仓/止盈/平仓/再入场是否由有效 delta 触发；
5. **Reference execution robustness**：touch、价带、延迟与成本假设是否稳健；
6. **Actual execution quality**：未来才有 fill/fee/slippage/rejection/reconciliation；
7. **Risk governance**：是否遵守当时声明的失效、预算和数据 fallback；
8. **Opportunity cost/churn**：WAIT 的漏失、过度交易和迟滞是否合理。

预测方向正确但仓位过大，是 sizing failure；分析正确但 limit 未成交，是 execution/opportunity failure；分析错误但 stop 合理，是 market failure 而不必同时判 risk failure。不得用最终盈亏把全部层次合成一个故事。

为避免后见之明，Agent 应在 cutoff 比较合理合法的替代动作和若干离散参考尺度（如无仓、probe、小/中/完整计划），或在 Review 中明确哪些只是反事实而非当时预注册。不能用 Outcome 的 MFE 倒推“本来应该满仓”。

## 31. 动态能力闭合检查

一次高质量、仍不可执行的动态决策，应能从原文回答：

```text
当前战略 episode 是什么，是否仍有效？
当前参考敞口是什么，哪些部分 UNKNOWN？
本次事实相对上次有什么决策相关变化？
目标敞口和 PositionDelta 是什么？
这是哪个动作、角色和 tranche？
激活、失效、到期、冲突和数据降级如何处理？
总体与待激活风险是否仍在 Agent 声明预算内？
参考执行假设是什么，未成交/部分成交怎么办？
何时再次 review，什么状态会 re-arm？
Outcome 后如何区分市场、动作、仓位、转换和执行？
```

缺失这些内容不使可读决策无法封存，但会降低 actionability，并在 Review 中形成明确能力缺口。candidate.3 至此完成市场、仓位与注意力决策的理论闭环；其有效性仍必须由未来新身份、冻结前瞻 Outcome 验证。

## 32. 注意力管理是动态交易的一部分

交易 Agent 距离自己的市场状态、假说路径和仓位义务最近，因此“现在继续看，还是稍后再看”属于交易判断，而不是确定性系统的市场判断。每个决策点除市场动作外，还应给出一种注意力动作：

| 注意力动作 | 大致适用情形 | Agent 仍须说明 |
|---|---|---|
| `CONTINUE_NOW` | 当前已出现明确信号，或约 1–5 分钟内可能完成触发、失效、突破接受、止损逼近等关键结构 | 持续到什么事件或大致时间、每轮需要更新哪些数据、何时退出连续观察 |
| `WAKE_AFTER` | 当前不值得持续消耗注意力，但约 5–10 分钟或更长时间后可能进入有决策价值的观察窗 | 希望何时复核、最晚何时仍有意义、到时优先检查什么、对应哪条假说路径 |
| `RELEASE` | 当前没有近端交易价值，可结束高强度观察 | 较宽松但有限的下次复核时间；不得无期限失联 |

这些时间只是大致语义，不是固定阈值。Agent 可根据资产速度、仓位风险、事件日历和数据频率选择更短或更长窗口；系统不得把 `1–5/5–10` 分钟变成隐藏 selector。

注意力动作与市场动作相互独立：`HOLD` 可能需要 `CONTINUE_NOW`，`OPEN` 后也可能转为 `WAKE_AFTER`，`WAIT` 不能省略机会成本和下次观察。持仓、未完成订单、接近保护位或事件发布中的 episode 通常需要更高观察强度，但最终节奏仍由交易 Agent 根据当时信息选择。

连续观察必须绑定新的数据游标，或明确记录该轮没有新事实；不能对同一快照反复推理并称为动态。`CONTINUE_NOW` 还必须有自定的结束条件，避免无限占用注意力。选择等待后若市场提前突变，应记录为注意力预测或信息到达风险，不允许事后改写原请求，也不应让系统用未预声明的市场算法伪造“Agent 已提前发现”。

交易 Agent 只决定观察价值和时间。请求登记、到期派发、恢复上下文、纸面订单机械触发和日志属于系统设计，其唯一 owner 是 [`design/CURRENT_BLUEPRINT.md`](../../../design/CURRENT_BLUEPRINT.md)；本理论包不定义其进程、文件、队列或 UI 架构。
